[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "large-scale-des"
version = "0.1.0"
authors = [
  { name="Qasim Khawaja" },
]
description = "Large-Scale Discrete Event Simulation Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
